# sdgc

./: .gitignore  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  _config.mk  _config.yml  critique.md  index.md  pyproject.toml  references.md  typos.toml
01_intro/: index.md
02_licensure/: index.md
02_sex/: index.md
03_drugs/: index.md
06_fraud/: index.md
07_measure/: index.md
08_capture/: index.md
09_licensure/: index.md
12_central/: index.md
14_interrupt/: index.md
15_bullshit/: index.md
16_accidents/: index.md
18_trolley/: index.md
19_curriculum/: index.md
_data/: authors.yml  lessons.yml  standards.yml
_extras/: slides.txt
_includes/: figure.html  footer.html  head.html  links.md  navbar.html  title.html  toc.html
_layouts/: page.html
a-little-psychology/: index.md
accidents/: index.md
ai-happens/: index.md  slides.md
alternatives/: index.md  slides.md
assets/: site.css  site.js
behavior/: index.md  slides.md
bibliography/: index.md
bullshit/: index.md
capture/: index.md
capture-fascism/: index.md  slides.md
care/: index.md
central/: index.md
change/: index.md
changes-minds/: index.md  slides.md
cheat/: index.md
cheating/: index.md
code/: index.md
control-and-alternatives/: index.md
conway/: index.md
curriculum/: index.md
disruption/: index.md  slides.md
docs/: all.html  index.html
drugs/: index.md
earnings/: index.md
encryption/: index.md
etc/: Nemilov.cls  latex.template  references.bib  settings.tex
extras/: words.txt
failure/: index.md
few-ideas/: index.md
(+168 files in other folders)
