[project]
name = "sdgc"
description = "sex and drugs and guns and code"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mccole>=3.1.0",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks.bib]
help = "Check bibliography entries."
cmd = "mccole bib"

[tool.taskipy.tasks.clean]
help = "Clean up generated and cache files."
cmd = """
    find . -type f -name '*~' -exec rm {} \\;
    find . -type d -name __pycache__ | xargs rm -rf
    find . -type d -name .ruff_cache | xargs rm -rf
"""

[tool.taskipy.tasks.check]
help = "Check code and project."
cmd = """
    mccole check --src . --dst docs
    typos *.md */*.md
"""

[tool.taskipy.tasks.serve]
help = "Serve generated HTML on port 8000."
cmd = "python -m http.server -d docs 8000"

[tool.taskipy.tasks.site]
help = "Build HTML."
cmd = """
    mccole build --src . --dst docs --single-page docs/all.html
    touch docs/.nojekyll
"""

[tool.mccole]
brand = "SDGC"
skips = [
    "*~",
    "*.txt",
    "docs",
    "typos.toml",
    "uv.lock"
]
